cmake_minimum_required(VERSION 3.20)
project(learnCpp)
set(subDir Cpp_11_14_Houjie)
# set(targetDir learnCpp_1_Start)
# set(targetDir learnCpp_2_VariadicTemplate)
# set(targetDir learnCpp_3_nullptr_auto)
# set(targetDir learnCpp_4_uniformInitialization)
set(targetDir ${subDir}/learnCpp_5_initializerList)
set(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/build)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
add_subdirectory(${CMAKE_SOURCE_DIR}/${targetDir})
