cmake_minimum_required(VERSION 3.20)
project(learnCpp)
set(subDir Cpp_11_14_Houjie)
# set(targetDir 1_Start)
# set(targetDir 2_VariadicTemplate)
# set(targetDir 3_nullptr_auto)
# set(targetDir 4_uniformInitialization)
set(targetDir ${subDir}/5_initializerList)
set(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/build)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
add_subdirectory(${CMAKE_SOURCE_DIR}/${targetDir})
